# snippets

./: LICENSE
C/: check_stack_crowth.c  struct_enum.c
CoffeeScript/: object.coffee
Java/: ShutdownHook.java  TryFinally.java
JavaScript/: define_undefined.js  function_call.js
Makefile/: Makefile
MemoryMountain/: .gitignore  memory_mountain.cc  mountain.py
Scala/: LoanPattern.scala  Sealed.scala
Script/: sed_example.sh
TypeScript/: class_default_member_variable.ts  enum.ts  object.ts  type_alias.ts  variable_arguments.ts
c/: field_width.c  glibc_version.c  nlcr.c  positional_printf.c  progressbar.c  signal.c  termios_output.c  union.c
c++/: abs.cc  constructor_exception.cc  empty_class.cc  for.cc  raii.cc  static_assert.cc  unique_ptr.cc
coffeescript/: undefined.coffee
go/: gzip.go  json.go  multiline.go  panic_and_recover.go  sample.go  size_of_empty_struct.go
html/: animation.html  prism.html
java/: CallBySharing.java  LoanPattern.java
javascript/: array_clone.js  array_push.js  async.js  async_function_creates_new_promise.js  await_throws_error.js  block_scope_function.js  class.js  unhandled_rejection_in_async_function.js
lua/: swap.lua
python/: russian-peasant-multiplication.py
rust/: abs.rs  address_of_struct.rs  as.rs  catch_panic.rs  const_atomic_usize.rs  drop_if.rs  (+34 more)
rust/gstreamer-tutorials/: Cargo.toml
rust/gstreamer-tutorials/src/: audio_visualizer_shader.rs  basic-1.rs  basic-12.rs  basic-13.rs  basic-2.rs  basic-3.rs  basic-4.rs  basic-5.rs  basic-6.rs  basic-7.rs  basic-8.rs  basic-9.rs  error.rs  play_flag.rs  playback-1.rs  playback-2.rs  playback-3.rs  playback-4.rs  playback-5.rs  playback-6.rs  playback-7.rs  video_test_src_pattern.rs  wave_scope_style.rs
(+163 files in other folders)
